--- a/LabMVC/Lab04/Lab04.csproj
+++ b/LabMVC/Lab04/Lab04.csproj
@@ -177,6 +177,8 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\DangKyThanhVien.cshtml" />
+    <Content Include="Views\Home\DangKyKhachHang.cshtml" />
+    <Content Include="Views\Home\HoSoDangKy.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
