--- a/LabMVC/Lab06/Lab06.csproj
+++ b/LabMVC/Lab06/Lab06.csproj
@@ -129,11 +129,17 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\HocSinhController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\NhaXuatBanController.cs" />
+    <Compile Include="Controllers\SachController.cs" />
     <Compile Include="Controllers\TacGiaController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\DAO\ChuDeDAO.cs" />
+    <Compile Include="Models\DAO\NhaXuatBanDAO.cs" />
+    <Compile Include="Models\DAO\SachDAO.cs" />
     <Compile Include="Models\DAO\TacGiaDAO.cs" />
     <Compile Include="Models\Entities\ADMIN.cs" />
     <Compile Include="Models\Entities\CHUDE.cs" />
@@ -141,17 +147,19 @@
     <Compile Include="Models\Entities\CTTHAMDO.cs" />
     <Compile Include="Models\Entities\DONDATHANG.cs" />
     <Compile Include="Models\Entities\KHACHHANG.cs" />
+    <Compile Include="Models\Entities\QuanLyBanSachDatabaseContext.cs" />
     <Compile Include="Models\Entities\NHAXUATBAN.cs" />
     <Compile Include="Models\Entities\QUANGCAO.cs" />
-    <Compile Include="Models\Entities\QuanLyBanSachDatabaseContext.cs" />
     <Compile Include="Models\Entities\SACH.cs" />
     <Compile Include="Models\Entities\TACGIA.cs" />
     <Compile Include="Models\Entities\THAMDO.cs" />
     <Compile Include="Models\Entities\VIETSACH.cs" />
+    <Compile Include="Models\ViewModel\HocSinhViewModel.cs" />
+    <Compile Include="Models\ViewModel\SachViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Assets\asc.png" />
+    <Content Include="Assets\HocSinh.xml" />
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.min.css" />
     <Content Include="Content\bootstrap-grid.rtl.css" />
@@ -200,6 +208,11 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\TacGia\Index.cshtml" />
+    <Content Include="Views\NhaXuatBan\Index.cshtml" />
+    <Content Include="Views\Sach\TheoNhaXuatBan.cshtml" />
+    <Content Include="Views\Sach\TheoChuDe.cshtml" />
+    <Content Include="Views\Sach\TheoDonGia.cshtml" />
+    <Content Include="Views\HocSinh\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
